# the_product0_mp3

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/AppStateModel/: CMakelists.txt  appModel.c  appModel.h
components/audio/: CMakeLists.txt  audioStream.c  audioStream.h
components/decoder/: CMakeLists.txt  mp3d.c  mp3d.h
components/decoder/examples/: mp3d_madExamples  mp3d_mimimp3Examples_h  mp3d_minimad  mp3d_minimp3Examples_c
components/decoder/mad/: bit.c  layer3.c
components/decoder/minimp3/: minimp3.h
components/mediaInterface/: CMakeLists.txt
components/mediaInterface/BluetoothClassic/: btClassic.c  btClassic.h
components/mp3Decoder/: CMakeLists.txt  Kconfig
components/mp3Decoder/mad/: README.md  layer3.c  madlld
components/mp3Decoder/minimp3/: minimp3.c
components/storage/: CMakeLists.txt  fileSystem.c  fileSystem.h  sdcard.c  sdcard.h
main/: CMakeLists.txt  app_main.c  aud_app_core.c  aud_app_core.h
